# nextcloud_plugin

./: LICENSE  README.md  pyproject.toml
src/nextcloud_plugin/: __init__.py  __version__.py
src/nextcloud_plugin/addon/: __init__.py  apps.py  models.py  provider.py  routes.py  serializer.py  typedmodel_workaround.py  views.py
src/nextcloud_plugin/addon/migrations/: 0001_initial.py
src/nextcloud_plugin/addon/settings/: __init__.py  defaults.py
src/nextcloud_plugin/addon_imp/: README.md  __init__.py  apps.py  imp.py
src/nextcloud_plugin/provider/: metadata.py  provider.py  utils.py
